MFH (fix for Bug #29573 : Segmentation fault when php function(called from XSLT templat) throw exception and Zero Byte Memory Leaks)